<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_author_menu">Post author menu</string>
    <string name="description_post_reply">Reply</string>
    <string name="description_post_views">Views</string>
    <string name="description_cancel_edit">Cancel edit</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="video_chooser">Choose App</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s created new post</string>
    <string name="notification_unsupported">Unsupported action</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_text">Error code: %1$s, error text: %2$s</string>
    <string name="new_posts">New posts</string>
    <string name="save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in_dialog">Sign in to proceed</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="authentication">Authentication</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="dialog_signOut">Are you sure?</string>
    <string name="auth_error">Authentication error</string>
    <string name="reg_error">Registration error</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>



</resources>