<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activity.SignUpFragment">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN UP FORM"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="@dimen/indent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginEnd="@dimen/indent"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/loginLayout"
            app:layout_constraintEnd_toEndOf="@+id/loginLayout"
            app:layout_constraintStart_toStartOf="@+id/loginLayout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginEnd="@dimen/indent"
            android:hint="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/passLayout"
            app:layout_constraintEnd_toEndOf="@+id/passLayout"
            app:layout_constraintStart_toStartOf="@+id/passLayout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginEnd="@dimen/indent"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/passRepeatLayout"
            app:layout_constraintEnd_toEndOf="@+id/passRepeatLayout"
            app:layout_constraintStart_toStartOf="@+id/passRepeatLayout"
            app:layout_constraintTop_toBottomOf="@id/loginLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passRepeatLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginEnd="@dimen/indent"
            android:hint="@string/repeat_password"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="@+id/signIn"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toBottomOf="@id/passLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_avatar"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent"
            android:text="@string/upload_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passRepeat"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:id="@+id/photoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/upload_avatar"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/removePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/remove" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginTop="@dimen/indent"
            android:layout_marginEnd="@dimen/indent"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passRepeatLayout">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</ScrollView>
